--- a/app/src/main/res/layout/fragment_expoalumnos.xml
+++ b/app/src/main/res/layout/fragment_expoalumnos.xml
@@ -16,22 +16,20 @@
             android:layout_height="0dp"
             android:padding="@dimen/dimens_margpadd"
             android:paddingBottom="@dimen/rv_paddbot"
-            app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            app:spanCount="1" />
+            app:layout_constraintTop_toTopOf="parent" />
 
         <TextView
             android:id="@+id/lblEmptyView"
             android:layout_width="wrap_content"
-            android:visibility="invisible"
             android:layout_height="wrap_content"
             android:drawableTop="@drawable/ic_person_add_black_24dp"
             android:text="@string/no_students_yet"
             android:textColor="#000000"
             android:textStyle="bold"
+            android:visibility="invisible"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
