--- a/app/src/main/res/layout/fragment_expovisitas.xml
+++ b/app/src/main/res/layout/fragment_expovisitas.xml
@@ -25,6 +25,7 @@
 
         <TextView
             android:id="@+id/lblEmptyView"
+            android:visibility="invisible"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:drawableTop="@drawable/ic_add_black_24dp"
