--- a/app/src/main/res/layout/fragment_visita_detail.xml
+++ b/app/src/main/res/layout/fragment_visita_detail.xml
@@ -13,7 +13,7 @@
         android:orientation="vertical">
 
         <Button
-            android:id="@+id/lbl_day"
+            android:id="@+id/btn_day"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="8dp"
@@ -28,44 +28,44 @@
             android:layout_height="wrap_content"
             android:layout_marginStart="8dp"
             android:text="Select day"
-            app:layout_constraintBottom_toBottomOf="@+id/lbl_day"
-            app:layout_constraintStart_toEndOf="@+id/lbl_day"
-            app:layout_constraintTop_toTopOf="@+id/lbl_day" />
+            app:layout_constraintBottom_toBottomOf="@+id/btn_day"
+            app:layout_constraintStart_toEndOf="@+id/btn_day"
+            app:layout_constraintTop_toTopOf="@+id/btn_day" />
 
         <Button
-            android:id="@+id/textView3"
+            android:id="@+id/btn_startTime"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="8dp"
             android:layout_marginTop="8dp"
             android:text="Start time"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/lbl_day" />
+            app:layout_constraintTop_toBottomOf="@+id/btn_day" />
 
         <TextView
-            android:id="@+id/textView4"
+            android:id="@+id/lbl_startTimeValue"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="8dp"
             android:layout_marginTop="8dp"
             android:layout_marginEnd="8dp"
             android:text="-"
-            app:layout_constraintEnd_toEndOf="@+id/textView3"
+            app:layout_constraintEnd_toEndOf="@+id/btn_startTime"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/textView3" />
+            app:layout_constraintTop_toBottomOf="@+id/btn_startTime" />
 
         <Button
-            android:id="@+id/textView5"
+            android:id="@+id/btn_endTime"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="8dp"
             android:layout_marginEnd="8dp"
             android:text="End time"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/lbl_day" />
+            app:layout_constraintTop_toBottomOf="@+id/btn_day" />
 
         <TextView
-            android:id="@+id/textView6"
+            android:id="@+id/lbl_endTimeValue"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="8dp"
@@ -73,19 +73,19 @@
             android:layout_marginEnd="8dp"
             android:text="-"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="@+id/textView5"
-            app:layout_constraintTop_toBottomOf="@+id/textView5" />
+            app:layout_constraintStart_toStartOf="@+id/btn_endTime"
+            app:layout_constraintTop_toBottomOf="@+id/btn_endTime" />
 
-        <Button
+        <TextView
             android:id="@+id/lbl_student"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="8dp"
             android:layout_marginEnd="8dp"
             android:text="Student"
-            app:layout_constraintEnd_toStartOf="@+id/textView5"
-            app:layout_constraintStart_toEndOf="@+id/textView3"
-            app:layout_constraintTop_toBottomOf="@+id/textView3" />
+            app:layout_constraintEnd_toStartOf="@+id/btn_endTime"
+            app:layout_constraintStart_toEndOf="@+id/btn_startTime"
+            app:layout_constraintTop_toBottomOf="@+id/btn_startTime" />
 
         <TextView
             android:id="@+id/lbl_valueStudent"
@@ -95,8 +95,8 @@
             android:layout_marginTop="8dp"
             android:layout_marginEnd="8dp"
             android:text="-"
-            app:layout_constraintEnd_toStartOf="@+id/textView5"
-            app:layout_constraintStart_toEndOf="@+id/textView3"
+            app:layout_constraintEnd_toStartOf="@+id/btn_endTime"
+            app:layout_constraintStart_toEndOf="@+id/btn_startTime"
             app:layout_constraintTop_toBottomOf="@+id/lbl_student" />
 
         <TextView
@@ -110,7 +110,7 @@
             app:layout_constraintTop_toBottomOf="@+id/lbl_valueStudent" />
 
         <EditText
-            android:id="@+id/editText3"
+            android:id="@+id/txt_comments"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginStart="8dp"
@@ -122,7 +122,6 @@
             android:maxLines="10"
             android:minLines="6"
             android:scrollbars="vertical"
-            android:text="Name"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/lbl_commentary" />
