--- a/app/src/main/res/layout-land/fragment_visita_detail.xml
+++ b/app/src/main/res/layout-land/fragment_visita_detail.xml
@@ -115,6 +115,8 @@
             android:layout_height="wrap_content"
             android:layout_marginStart="8dp"
             android:layout_marginTop="8dp"
+            android:focusable="false"
+            android:focusableInTouchMode="true"
             android:layout_marginEnd="8dp"
             android:ems="10"
             android:inputType="textMultiLine"
