--- a/app/src/main/res/layout/fragment_visita_detail.xml
+++ b/app/src/main/res/layout/fragment_visita_detail.xml
@@ -117,6 +117,8 @@
             android:layout_marginTop="8dp"
             android:layout_marginEnd="8dp"
             android:ems="10"
+            android:focusable="false"
+            android:focusableInTouchMode="true"
             android:inputType="textMultiLine"
             android:lines="8"
             android:maxLines="10"
